--- a/style.css
+++ b/style.css
@@ -155,14 +155,16 @@ header {
   padding: 2rem 1.2rem 4rem 1.2rem;
   border-radius: 9px;
   position: relative;
-  box-shadow: 10px 10px 12px -12px rgb(16, 16, 16);
+  box-shadow: 6px 6px 2px 0px rgb(79, 79, 79);
   scale: 1;
   transition: all 0.3s ease;
+  transform: translate(0%, 0%);
 }
 
 .movie_card:hover {
   scale: 1.03;
-  box-shadow: 2px 2px 20px 0px rgb(166, 166, 166);
+  box-shadow: 3px 3px 15px -1px rgb(79, 79, 79);
+  transform: translate(-2%, -1.25%);
 }
 
 .movie_card_title {
